Fix flickering with imagemap infos

--- a/omeka/themes/ddb/css/style.css
+++ b/omeka/themes/ddb/css/style.css
@@ -740,6 +740,7 @@ h1 {
     background-color: rgba(255, 255, 255, 0.6);
     display: none;
     text-align: center;
+    cursor: pointer;
 }
 
 .imgmapinfo h1, .imgmapinfo h2, .imgmapinfo h3, .imgmapinfo h4, .imgmapinfo h5, .imgmapinfo h6, .imgmapinfo p {
